# talent8-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/: __init__.py  bedrock_client.py  config.py  models.py  server.py
tests/: __init__.py  conftest.py  test_bedrock_client.py  test_config.py  test_models.py  test_server.py
